fix(Field): data-description spacing

--- a/designsystem/field/field.module.css
+++ b/designsystem/field/field.module.css
@@ -10,7 +10,8 @@
 	}
 
 	/* Remove space between label and description */
-	.field > p:first-of-type {
+	.field > p:first-of-type,
+	.field > [data-description] {
 		margin-top: 0;
 	}
 	.field > :not(:disabled, [aria-disabled="true"]) {
